[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qaoa"
dynamic = ["version"]
description = 'Quantum Approximate Optimisation Algorithms in Qiskit'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Mithilesh Kumar", email = "mithilesh.qit@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/QAOAv/qaoa#readme"
Issues = "https://github.com/QAOAv/qaoa/issues"
Source = "https://github.com/QAOAv/qaoa"

[tool.hatch.version]
path = "src/qaoa/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/qaoa tests}"

[tool.coverage.run]
source_pkgs = ["qaoa", "tests"]
branch = true
parallel = true
omit = [
  "src/qaoa/__about__.py",
]

[tool.coverage.paths]
qaoa = ["src/qaoa", "*/qaoa/src/qaoa"]
tests = ["tests", "*/qaoa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
